--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,13 @@
-@import './styles/style';
-
+@import "./styles/style";
+* {
+  margin: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 :root {
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: black;
-
+  //background-color: black;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -12,21 +15,33 @@
   -webkit-text-size-adjust: 100%;
 }
 
+#particles-js {
+  background: #202020;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  z-index: -1;
+}
+
 html {
   width: 100%;
   height: 100%;
-} 
+  margin: none;
+}
 body {
-  margin: 10px;
+  // position: fixed;
+  // top: 0;
+  // left: 0;
+  margin: none;
   display: block;
   justify-content: center;
-  height: 97%;
+  height: 98%;
   border: 1px solid white;
-  padding: 10px;
+  padding: none;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
