--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 @import "./styles/Home.style.scss";
 @import "./styles/Projects.style.scss";
-
+@import "./styles/Contact.style.scss";
 * {
   margin: none;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -18,7 +18,7 @@
 }
 
 #particles-js {
-  background-color: black;
+  background-color: #100520;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -47,4 +47,71 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+.languaje-container {
+  opacity: 0.7;
+  position: fixed;
+  top: 90px;
+  right: 5px;
+  padding: 0;
+  width: 100px;
+  height: 50px;
+  ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-decoration: none;
+    list-style: none;
+    li {
+      display: flex;
+      margin: 3px;
+      cursor: pointer;
+    }
+  }
+}
+
+.squareL-active {
+  width: 15px;
+  height: 15px;
+  border: 1px solid white;
+  margin: 0;
+  padding: 0;
+  background: white;
+  margin-right: 3px;
+  transition: 0.5s ease;
+}
+
+.squareL-inactive {
+  width: 15px;
+  height: 15px;
+  border: 1px solid white;
+  margin: 0;
+  padding: 0;
+  background: none;
+  margin-right: 3px;
+  transition: 0.5s ease;
+  cursor: pointer;
+}
+
+.square-active {
+  width: 15px;
+  height: 15px;
+  border: 1px solid black;
+  margin: 0;
+  padding: 0;
+  background: black;
+  margin-right: 3px;
+  transition: 0.5s ease;
+}
+
+.square-inactive {
+  width: 15px;
+  height: 15px;
+  border: 1px solid black;
+  margin: 0;
+  padding: 0;
+  background: none;
+  margin-right: 3px;
+  transition: 0.5s ease;
 }
