--- a/src/styles/Home.style.scss
+++ b/src/styles/Home.style.scss
@@ -19,7 +19,7 @@
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    filter: grayscale(1);
+    //filter: grayscale(1);
   }
   .yomero-text {
     display: block;
@@ -103,24 +103,116 @@
   }
 }
 
-.square-active {
-  width: 15px;
-  height: 15px;
-  border: 1px solid black;
-  margin: 0;
-  padding: 0;
-  background: black;
-  margin-right: 3px;
-  transition: 0.5s ease;
-}
+@media (max-width: 600px) {
+  .name-title {
+    position: fixed;
+    left: 20px;
+    top: -10px;
+    h2 {
+      width: 130px;
+      font-weight: lighter;
+      font-size: 40px;
+    }
+  }
+  .yomero-container {
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+    }
+    .yomero-text {
+      display: block;
+      margin-left: 10px;
+      h3 {
+        text-align: center;
+        margin: 0;
+        font-size: 3rem;
+        font-weight: lighter;
+      }
+      h5 {
+        text-align: center;
+        margin: 0;
+        font-size: 1.5rem;
+        font-weight: lighter;
+      }
+    }
+  }
+  .navigator-menu-cont {
+    position: fixed;
+    top: 90px;
+    width: 290px;
+    height: 40px;
+    background-color: white;
+    padding: 0;
+    color: black;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 20px;
+    ul {
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      li {
+        list-style: none;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        margin-left: 10px;
+      }
+    }
+  }
+  #logo-main {
+    opacity: 0.5;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    transition: 0.5s ease;
+    &:hover {
+      opacity: 1;
+    }
+  }
+  .info-cont {
+    position: fixed;
+    top: 65%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 250px;
+    z-index: 1;
+    transition: 0.5s ease;
+    p {
+      font-size: 15px;
+      font-weight: normal;
+      text-align: center;
+      opacity: 0.7;
+    }
+    &:hover {
+      font-weight: normal;
+    }
+  }
 
-.square-inactive {
-  width: 15px;
-  height: 15px;
-  border: 1px solid black;
-  margin: 0;
-  padding: 0;
-  background: none;
-  margin-right: 3px;
-  transition: 0.5s ease;
+  .social-icons-cont {
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    #Icon {
+      width: 25px;
+      height: 25px;
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+  }
 }
