--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,13 @@
 @import "./styles/Home.style.scss";
 @import "./styles/Projects.style.scss";
 @import "./styles/Contact.style.scss";
+
+@import url("https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100&display=swap");
+
 * {
   margin: none;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Abel", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 :root {
   color-scheme: light dark;
@@ -12,18 +15,7 @@
   //background-color: black;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
-
-#particles-js {
-  background-color: #100520;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  z-index: -1;
 }
 
 a {
@@ -42,6 +34,22 @@ body {
   height: 98%;
   border: 1px solid white;
   padding: none;
+  background: linear-gradient(-45deg, #000000, #202020);
+  background-size: 400% 400%;
+  animation: gradient 12s ease infinite;
+  height: 98vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 h1 {
